k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goserver
  labels:
    app: goserver
spec:
  selector:
    matchLabels:
      app: goserver
  replicas: 5
  template:
    metadata:
      name: "goserver"
      labels:
        app: "goserver"
    spec:
      containers:
        - name: goserver
          image: jamesfrj/fc-go-server:v3
