k8s/ingress.yaml
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: ingress-host
  spec:
    ingressClassName: nginx
    rules:
      - host: ingress.codeonblue.com.br
        http:
          paths:
            - pathType: Prefix
              backend:
                service:
                  name: goserver-service
                  port:
                    number: 80
              path: /
